<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/panel_color"
    tools:context=".Activities.LandscapeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="12">

        <RelativeLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="8"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@color/panel_color"
                tools:context=".Activities.MainActivity">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageProfile"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/background_icon"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_8sdp"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageSignOut"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:background="@drawable/background_icon"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_settings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/white"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/imageProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imageProfile"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/background_content_bottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ContactRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:orientation="vertical"
                        android:overScrollMode="never"
                        android:padding="@dimen/_20sdp"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        />

                    <ProgressBar
                        android:id="@+id/progressBarContact"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/textErrorMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_24sdp"
                        android:layout_marginEnd="@dimen/_24sdp"
                        android:textColor="@color/error_color"
                        android:textSize="@dimen/_12ssp"
                        android:visibility="gone"
                        />


                </FrameLayout>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addContactButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_24sdp"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:backgroundTint="@color/burgundy"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_add"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@color/general_bg"
                tools:context=".Activities.ChatActivity">

                <View
                    android:id="@+id/viewBackground"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:background="@drawable/background_content_bottom"
                    app:layout_constraintBottom_toTopOf="@id/layoutSend"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="70dp" />

                <View
                    android:id="@+id/headerBackground"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/panel_color"
                    app:layout_constraintBottom_toTopOf="@id/viewSupporter"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ImageBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/background_icon"
                    android:padding="@dimen/_6sdp"
                    android:src="@drawable/ic_close"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/white"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ImageInfo"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/background_icon"
                    android:padding="@dimen/_4sdp"
                    android:src="@drawable/ic_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:tint="@color/white"
                    />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imageContactProfile"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_60sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@drawable/background_icon"
                    android:scaleType="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="@dimen/_8sdp"/>

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/ImageBack"
                    app:layout_constraintEnd_toStartOf="@id/ImageInfo"
                    app:layout_constraintStart_toEndOf="@id/ImageBack"
                    app:layout_constraintTop_toTopOf="@id/ImageBack"
                    />

                <View
                    android:id="@+id/viewSupporter"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/burgundy"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintTop_toBottomOf="@id/ImageBack"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chatRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:overScrollMode="never"
                    android:padding="@dimen/_20sdp"
                    app:stackFromEnd="true"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="@id/viewBackground"
                    app:layout_constraintTop_toBottomOf="@id/viewSupporter"/>

                <ProgressBar
                    android:id="@+id/progressBarChat"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    app:layout_constraintBottom_toBottomOf="@id/viewBackground"
                    app:layout_constraintEnd_toEndOf="@id/viewBackground"
                    app:layout_constraintStart_toStartOf="@id/viewBackground"
                    app:layout_constraintTop_toTopOf="@id/viewBackground"/>


                <FrameLayout
                    android:id="@+id/layoutSend"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/background_chat_input"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/ic_send"
                        android:tint="@color/white"/>
                </FrameLayout>

                <EditText
                    android:id="@+id/inputMessage"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/type_message"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layoutSend"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>